--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+	<img src="./someimage.jpg" alt="some image" title="some title">
+	<img src="./someimage.jpg" alt="some image" title="some title">
+	<img src="./someimage.jpg" alt="some image" title="some title">
 
 </body>
 </html>
