--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="./images/image.jpg" alt="image" />
+  <img src="./images/image.jpg" alt="image" />
+  <img src="./images/image.jpg" alt="image" title="title" />
 
 </body>
 </html>
