--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="http://cdn.sci-news.com/images/enlarge5/image_6303e-Neutron-Star.jpg">
+  <img src="https://3c1703fe8d.site.internapcdn.net/newman/csz/news/800/2018/neutronstarj.jpg" alt="Neutron Star">
+  <img src="https://www.sciencemag.org/sites/default/files/styles/inline__699w__no_aspect/public/ligo_16x9.jpg?itok=FpTJz9in" alt="Neutron Star Collisions" title="Neutron Star Collisions">
 
 </body>
 </html>
