--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://www.four-paws.org.za/files/International/Projects/Bears/Bear_Albania/_resampled/SetRatioSize540540-VIER-PFOTEN_2014-11-05_001.jpg" alt="">
+  <img src="https://assets.bonappetit.com/photos/5b0f34699570db5acbd02609/16:9/w_1280%2Cc_limit/perfect-baked-potato.jpg" alt="Do you like potatoes?">
+  <img src="https://vignette.wikia.nocookie.net/muppet/images/e/e6/Swedishcheflobsters.jpg/revision/latest?cb=20120429145007" alt="The Swedish Chef being held up by three rather dashing lobster banditos. In sombreros." title="Bork Bork Bork">
 
 </body>
 </html>
