--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawnimg lion" title="We're here to help you!">
 
 </body>
 </html>
