--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://i.chzbgr.com/full/9013919744/h58F020A6/">
+  <img src="https://i.pinimg.com/originals/96/2f/11/962f112ed2a368b5d021732bf2e55158.jpg" alt="Cat stuck in clothes hanger">
+  <img src="http://i.chzbgr.com/full/2837509/h6C00755B/" alt="Cats in love" title="Smitten Kitten">
 </body>
 </html>
