--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawning">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawning" title="Don't let morning breath hold you back">
 </body>
 </html>
