--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="picture of a lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion picture" title="Growling Lion">
 </body>
 </html>
