--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Ashley before 7am" title="Ashley in the wild">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Ashley before 7am" title="Ashley in the wild">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Ashley before 7am" title="Ashley in the wild">
 
 </body>
 </html>
