--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-  <!-- Your code here -->
 
-</body>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawning">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawning" title="Beautiful Creature">
+
+
+
+/body>
 </html>
