--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning lion" title="HTML Images Lab Doesn't Make Me Sleepy">
 </body>
 </html>
