--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="www.something1.com">
+  <img src="www.something2.com" alt="A Picture of Something 2">
+  <img src="www.something3.com" alt="A Picture of Something 3" title="I am a Something 3">
 
 </body>
 </html>
