--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Big Lion Roaring">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Big Lion Roaring" title="Watch out for the scarey lion!">
 </body>
 </html>
