--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <!-- Your code here -->
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Big Lion Roaring">
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Big Lion Roaring" title="Watch out for the scarey lion!">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Big Lion Roaring" title="Watch out for the scary lion!">
 </body>
 </html>
