--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion" title="A Yawning Lion">
 
 </body>
 </html>
