--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" alt="">
 
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" alt="A Sad person">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" alt="A Sad person" title="This is a picture of a man.">
 </body>
 </html>
