--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="lion">
+  <img src="https://www.fujifilmusa.com/products/digital_cameras/x/fujifilm_x20/sample_images/img/index/ff_x20_008.JPG" alt="purple flower" title="purple flower">
+  <img src="http://www.tompetty.com/sites/g/files/g2000007521/f/Sample-image10-highres.jpg" alt="apples" title="apples">
 </body>
 </html>
