--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://images.pexels.com/photos/145939/pexels-photo-145939.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+  <img src="https://images.pexels.com/photos/434090/pexels-photo-434090.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="A husky puppy in the snow">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion yawning...or roaring!" title="He is sooo sleepy.">
 
 </body>
 </html>
