--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  <img src="po" alt="mamt">
+  <img src="g" alt="g">
+  <img src="g" alt="g" title="im">
   <!-- Your code here -->
 
 </body>
