--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Images</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML Images</title>
 </head>
+
 <body>
 
-  <!-- Your code here -->
-
+    <!-- Your code here -->
+    <!--Images are inserted into HTML using the img tag.-->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+    <!-- The src attribute provides the relative path or URL to the image file we want to display. -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion.">
+    <!--The alt attribute contains text relevant to the image we're displaying, and will appear in its place if the image fails to load.-->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion with a title." title="A title.">
+    <!--One additional attribute that can be useful is the title. Content added to this attribute will display when we hover over the image with our mouse. -->
 </body>
+
 </html>
