--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://i.imgur.com/H1qsYEl.png">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="The title attribute should have text content.  This will show up when a mouse hovers over the image">
 </body>
 </html>
