--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion" title="Lion"> 
   <!-- Your code here -->
 
 </body>
