--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+<img src="https://images.app.goo.gl/XzhnxJhxAFMfUTwx5.png" alt="source, alt and title" title="Cool Pic">
+<img src="https://giphy.com/gifs/dance-cartoon-brother-241LfGhONZv5EWosVV" alt="I have a source and Tite">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="source, alt and title" title="Cool Pic">
 </body>
 </html>
