--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roars">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "lion roars" title="I'm gonna be a mighty king">
 
 </body>
 </html>
