--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src="/learn-lion-img.jpg">
+<img src="/learn-lion-img.jpg" alt="my company name">
+<img src="/learn-lion-img.jpg" alt="my company name" title="we're here to help you!">
 </body>
 </html>
