--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  
+  <img src="/learn-lion-img.jpg">
+  <img src="/learn-lion-img.jpg" alt="my company name">
+  <img src="/learn-lion-img.jpg" alt="my company name" title="we're here to help you!">
 
 </body>
 </html>
