--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+<img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "Picture of a lion">
+<img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "Picture of a lion" title = "Roar with the lions!">
 </body>
 </html>
