--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<img src="https://i.imgur.com/H1qsYEl.png">
+
+<img src="https://i.imgur.com/ir7FHYs.jpg" alt="clean for 2 years!">
+
+<img src="https://i.imgur.com/DurZELg.jpg" alt="Oregon Trail Disk" title= "You wouldn't live to Kansas!">
 
 </body>
 </html>
