--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Images</title>
-</head>
-<body>
-
-  <!-- Your code here -->
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML Images</title>
+  </head>
+  <body>
+    <!-- Your code here -->
+    <img src="a" />
+    <img src="a" alt="a" />
+    <img src="a" alt="a" title="a" />
+  </body>
 </html>
