--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
- <img  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion!">
- <img  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion!" title="kitty!">
+ <img  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion-image!">
+ <img  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="liom-image#2!" title="kitty!">
 
 </body>
 </html>
