--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://i.imgur.com/H1qsYEl.png">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="alternate message">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support" title="crow">
 </body>
 </html>
