--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of a lion roaring.">
+  
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of a lion roaring." title="King of the Jungle">
 </body>
 </html>
