--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="comedic crow gets wholesome support">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="comedic crow gets wholesome support" title="lion">
+
 
 </body>
 </html>
