--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/filestore.rescuegroups.org/1460/pictures/animals/10900/10900687/41221687_480x587.jpg">
+  <img src="https://images-na.ssl-images-amazon.com/images/I/811hvGypcPL._SY355_.png" alt="Fluffy white puppy">
+  <img src="https://www.petmd.com/sites/default/files/hernia-in-puppies.jpg" alt="husky puppy in the grass" title="Husky Puppy">
 </body>
 </html>
