--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://imgs.xkcd.com/comics/glacier.png">
+  <img src="https://imgs.xkcd.com/comics/fandom.png" alt="Fandom xkcd">
+  <img src="https://imgs.xkcd.com/comics/blade_runner.png" alt="Bladrunner xkcd" title="Blade Runner. Classic but incredibly slow">
 
 </body>
 </html>
