--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>HTML Images</title>
 </head>
 <body>
+  <img src="  https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="  https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Yarning">
+
+  <img src="  https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Yarning" title="Sleepy Lion">
+
 
   <!-- Your code here -->
-
 </body>
 </html>
