--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Sorry, cannot display image.">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Sorry, cannot display image." title="yawning lion">
+
+
 
 </body>
 </html>
