--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src = https://s3.amazonaws.com/ironboard-learn/lion.jpg alt = "sleepy lion">
+<img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "sleepy lion" title = "Keep hands at your sides at all times!">
 </body>
 </html>
