--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of male lion roaring">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of male lion roaring" title="Lions like to roar!">
 
 </body>
 </html>
