--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  
+  <img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion King">
+   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt =" Lion Talk" title="We are here to meet all of your lions needs.">
   <!-- Your code here -->
 
 </body>
