--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+#The first should have just a source attribute
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+
+#The second should include an alt text, in addition to a source
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring">
+
+#The third should have both an alt and source attribute, as well as a title attribute
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="roaring lion" title="We're here to help you!">
+
   <!-- Your code here -->
 
 </body>
