--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>HTML Images</title>
 </head>
 <body>
+<img src="https://i.imgur.com/H1qsYEl.png">
 
-  <!-- Your code here -->
+<img src="../images/my_company_logo.png" alt="my company name">
+
+<img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
 
 </body>
 </html>
