--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <img src="https://3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion" title="We're here to help you!">
 
 </body>
 </html>
