--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="roaring lion">
+  <img src="https://www.nobelprize.org/images/friedman-13280-portrait-medium.jpg" alt="Milton" title="Friedman">
+  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e2/Ayn_Rand_by_Talbot_1943.jpg/220px-Ayn_Rand_by_Talbot_1943.jpg" alt="Ayn" title="Rand">
 
 </body>
 </html>
