--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/sad_meme.jpg">
+  <img src="https://vignette.wikia.nocookie.net/godofwar/images/e/e8/Norse_Kratos.png" alt="BOY!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="in the jungle, the mighty jungle..." title="The Lion Sleeps Tonight">
 
 </body>
 </html>
