--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="./" alt="">
+  <img src="./" alt="local dir">
+  <img src="./" alt="local dir", title="Fles">
 
 </body>
 </html>
