--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://i.imgur.com/W9nUnQe.jpg">
+  <img src="https://i.imgur.com/W9nUnQe.jpg" alt="RubyPython Sandbox Illustrated">
+  <img src="https://i.imgur.com/W9nUnQe.jpg"
+       alt="RubyPython Sandbox Illustrated"
+       title="Here is a workspace that uses RubyPython">
 </body>
 </html>
