--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <title>HTML Images</title>
 </head>
 <body>
-
   <!-- Your code here -->
+  <img src="../i.imgur.com/H1qsYEl.png">
+
+  <img src="Housing-Associations_opt.png" alt="Housing Association">
+
+
+  <img src="https://Housing-Associations_opt.png" alt="Housing Association" title="We're here to help you find a safe home!">
+
 
 </body>
 </html>
