--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Amazon AWS Lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Amazon AWS Lion" title="The Roaring Lion.">
 </body>
 </html>
