--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
   <!-- Your code here -->
 
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring" title="Here's a lion roaring">
 </body>
 </html>
