--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="../blah.jpg">
+  <img src="../blah.jpg" alt="Blah Blah">
+  <img src="../blah.jpg" alt="Blah Blah" title="Blah">
 </body>
 </html>
