--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
+  <img src="https://www.instagram.com/p/Bt_VDslDb26/">
+  <img src="https://www.instagram.com/p/By6AdWcj5N4/" alt="Image displays Jack Russel dog with his paws resting on a Mac laptop keyboard">
+  <img src="https://www.instagram.com/p/BqDrr8vHNtz/" alt="Image displays Jack Russel dog wearing a winter coat" title="Mushroom The Pupperino">
 
-  <!-- Your code here -->
 
 </body>
 </html>
