--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
   <!-- Your code here -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion roars">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion roars" title="The King of Jungle!">
+
 
 </body>
 </html>
