--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src="https://www.fujifilm.com/products/digital_cameras/x/fujifilm_x_t1/sample_images/img/index/ff_x_t1_001.JPG">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion roaring mightily">
+    <img src="https://s3.amazonaws.com/ironboard-learn/sad_meme.jpg" alt="Dawson ugly crying" title="Ugly Cry"
 </body>
 </html>
