--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
   <!-- Your code here -->
+  <img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  
+  <img src  ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A roaring lion">
+   
+  <img src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A roaring lion" title ="Pride lion on grass" >
 
 </body>
 </html>
