--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
 
   <!-- Your code here -->
 
+  <div><img src="https://images.unsplash.com/photo-1571680719972-f18bb57077cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1834&q=80"
+    width="100" height="100">
+  </div>
+
+  <div>
+    <img
+      src="https://images.unsplash.com/photo-1566658426752-2c131ea62eaa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=933&q=80"
+      alt="a leaf with raindrops" width="200" height="200">
+  </div>
+
+  <div>
+    <img src="https://images.unsplash.com/photo-1563109696-9a5563d6e0ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1654&q=80" alt="two people standing and talking at a parade" title="Happy Pride!" width="300" height="300">
+  </div>
+  
 </body>
 </html>
