--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 
   <!-- Your code here -->
+<img src="https://www.stickpng.com/assets/images/584d493b0a44bd1070d5d477.png">
+<img 
+  src="https://www.stickpng.com/assets/images/584d493b0a44bd1070d5d477.png"
+  alt="Astro's logo">
+<img 
+  src="https://www.stickpng.com/assets/images/584d493b0a44bd1070d5d477.png"
+  alt="Astro's logo"
+  title="Go 'Stros!">
 
 </body>
 </html>
