--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Images</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML Images</title>
+  </head>
+  <body>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
 
-  <!-- Your code here -->
+    <img
+      src="https://i.imgur.com/J04g1Xd.jpg?1"
+      alt="The Globe at Fresh Meadows State Park"
+    />
 
-</body>
+    <img
+      src="https://i.imgur.com/UFRCcS0.jpg"
+      alt="Vacation time"
+      title="Beautiful sunny day in Las Terrenas, Dominican Republic"
+    />
+  </body>
 </html>
