--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  <img src="../images/image.jpg">
+  <img src="../images/image.jpg", alt="a basic image">
+  <img src="../images/image.jpg", alt="a basic image", title="my image">
   <!-- Your code here -->
 
 </body>
