--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src="./img.png">
+  <img src="./img.png" alt="Blah blah blah">
+  <img src="./img.png" alt="Blah blah blah" title="Hewwo">
 </body>
 </html>
+
+
+
