--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a fucking lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a fucking lion" title="bigass lion">
 
 </body>
 </html>
