--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="my company name">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="my company name" title="We're here to help you!">
 
 </body>
 </html>
