--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A Roaring Lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A Roaring Lion" title="King of the Jungle!">
 
 </body>
 </html>
