--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="resting lion roaring in field">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="resting lion roaring in field" title="roar!">
 
 </body>
 </html>
