--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://cdn.vox-cdn.com/thumbor/Cdw6qktAfg_GJPhUqJORBZMLqRk=/0x0:4000x2667/1200x675/filters:focal(2078x283:2718x923)/cdn.vox-cdn.com/uploads/chorus_image/image/66063681/GettyImages_1197451354.0.jpg">
+
+  <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/16615/production/_110496619_australia_bush_fires_13jan2020_640-nc.png" alt="Map of Australian Bush Fires">
+
+  <img src="https://media.npr.org/assets/img/2020/01/06/australia-fire-map_wide-af8e07f7339a2d0ac707162dd28ab73f935ae61c.jpg?s=1400" alt="Another map of Australian Bush Fires" title="Bush Fire Map">
 
 </body>
 </html>
