--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <!-- Your code here -->
-
-</body>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a little lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a little lion" title="here's a lion">
 </html>
