--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
 <body>
 
   <!-- Your code here -->
-
-</body>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a little lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a little lion" title="here's a lion">
 </html>
