--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 
   <!-- Your code here -->
 
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="pic of roaring lion">
+
+   	<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="pic of roaring lion" title="hear the lion roar">
+
 </body>
 </html>
