--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
   <!-- Your code here -->
+  <img src="../images/my_company_logo.png">
+  <img src="../images/my_company_logo.png" alt="The first <img> tag is missing!">
+  <img src="../images/my_company_logo.png" alt="The first <img> tag is missing!"
+   title="The third <img> tag is missing!">
 
 </body>
 </html>
