--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<p><img src="https://finance.yahoo.com/news/tips-for-coronavirus-cash-crunch-180853877.html"></p>
+
+<p><img src="https://finance.yahoo.com/news/fed-calls-third-emergency-meeting-announces-unprecedented-moves-to-calm-corporate-debt-120121252.html"
+alt="picture of federal reserve chairman, Jay Powell"></p>
+
+
+<p><img src="https://finance.yahoo.com/news/tips-for-coronavirus-cash-crunch-180853877.html" alt="picture of Senator Chuck Shumer"
+title="Senator Shumer speaks in Senate on coronavirus aid"></p>
 
 </body>
 </html>
