--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="King of the jungle yawns">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="King of the jungle yawns" title="Don't bother this lion until after breakfast">
 
 </body>
 </html>
