--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion" title="YAWN">
 </body>
 </html>
