--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <title>HTML Images</title>
 </head>
 <body>
+  
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-  <!-- Your code here -->
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+ alt="Its A Lion">
+ 
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+ alt="Animal Pics" title="Its a Lion">
 
 </body>
 </html>
