--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
-
+  <!-- <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support" title="Caw Caw Caw!"> -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://images.freeimages.com/images/large-previews/61d/christmas-1443467.jpg" alt="Nativity Characters">
+  <img src="https://images.freeimages.com/images/large-previews/bd7/falloxbow-1058032.jpg" alt="Oxbow Lake in the Fall" title="WOW, is this pretty!!!">
 </body>
 </html>
