--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+<img src="http://www.google.com/images/001">
+<img src="http://www.google.com/images/001" alt="asdf">
+<img title="asdf" alt="asdf" src="http://www.google.com/images/001">
   <!-- Your code here -->
 
 </body>
