--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Bigg kitty">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Bigg KITTUS" title="Action Kat">
 </body>
 </html>
