--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+    <img src="https://i.imgur.com/H1qsYEl.png">
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support" title="We're here to help you!">
   <!-- Your code here -->
 
 </body>
