--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://i.imgur.com/H1qsYEl.png">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow"  title="Crow">
+
 
 </body>
 </html>
