--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://i.imgur.com/H1qsYEl.pnghttps://i.imgur.com/H1qsYEl.png" >
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="Alternative text">
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="Alternative text" title="Title">
 
 </body>
 </html>
