--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A smiling lion" />
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A smiling lion" title="Seriously, a lion." />
 </body>
 </html>
