--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 
   <!-- Your code here -->
 
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYjNmQO8rrA-2qj8BH3PdVOIJ3EhGBZiAgRA&usqp=CAU">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYjNmQO8rrA-2qj8BH3PdVOIJ3EhGBZiAgRA&usqp=CAU" alt="cute frog with wizard hat">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYjNmQO8rrA-2qj8BH3PdVOIJ3EhGBZiAgRA&usqp=CAU" alt="Bear with heart envelope in hand" title="Send a bear hug!">
+
 </body>
 </html>
