--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://i.imgur.com/H1qsYEl.png" >
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="something something something" >
+  <img src="https://i.imgur.com/H1qsYEl.png" alt="something something something" title="Hello World">
+
 
 </body>
 </html>
