--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://66.media.tumblr.com/tumblr_mczpcpmMU61ryw2kro1_500.gif" />
+  <img src="https://66.media.tumblr.com/tumblr_mczpcpmMU61ryw2kro1_500.gif" alt="Homer into pizza" />
+  <img src="https://66.media.tumblr.com/tumblr_mczpcpmMU61ryw2kro1_500.gif" alt="Homer super into pizza" title="Mmmmm Cheesy" />
 
 </body>
 </html>
